# VacationMediaProcessor

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: tag-build.yml
docs/: architecture.md
tests/: __init__.py  test_assets.py  test_core.py  test_i18n.py  test_pair_cleanup.py  test_trip_selection.py
vmp/: __init__.py  main.py  manifest.py  pair_cleanup.py  planner.py  reports.py
vmp/assets/i18n/: en.json
vmp/core/: __init__.py  discovery.py  i18n.py  logging_config.py  models.py  processes.py  settings.py
vmp/gui/: settings_dialog.py  workers.py
vmp/gui/common/: __init__.py  backup_discovery.py  dialogs.py  file_transfer.py  form_rows.py  plan_display.py  theme.py  thumbnails.py  widgets.py
vmp/gui/lasso/: __init__.py  dialog.py  geocode.py  histogram.py  map_view.py  thumb_strip.py  transfer_worker.py  trip_selection.py  ui.py
vmp/gui/main/: __init__.py  apply_flow.py  diff_actions.py  header.py  layout.py  media_table.py  overlay_flow.py  preview_pane.py  scan_flow.py  status_stats.py  table_actions.py  window.py  window_geometry.py  worker_lifecycle.py  workflow_panel.py
vmp/gui/pairs/: __init__.py  dialog.py  row.py  viewer.py  worker.py
vmp/metadata/: __init__.py  gps.py  writing.py
vmp/pipeline/: __init__.py  apply.py  scan.py  shared.py
vmp/timestamps/: __init__.py  candidates.py  parsing.py  resolution.py
vmp/tools/: __init__.py  image.py  video.py
